--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_shop.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_shop.xml
@@ -1,12 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#e6e6e6">
 
-    <TextView
+
+    <LinearLayout
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="shop a"
-        android:gravity="center"/>
+        android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/rl_shopping_null"
+            android:layout_width="match_parent"
+            android:layout_height="310dp"
+            android:layout_gravity="center_vertical">
+            <ImageView
+                android:id="@+id/civ_shopping_null"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp"
+                android:background="#00000000"
+                android:src="@drawable/ic_shoppingcart_null"/>
+            <TextView
+                android:id="@+id/tv_shopping_null"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_below="@id/civ_shopping_null"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:text="购物车空空如也"
+                android:textColor="#8a8a8a"
+                android:textSize="20sp"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp">
+            <Button
+                android:id="@+id/bt_shopping_null"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:text="去抢购"
+                android:textSize="20sp"
+                android:textColor="#ffffff"
+                android:background="#0e932e"/>
+        </RelativeLayout>
 
-</LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
