--- a/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="con_font_gray2">#E5E5E5</color>
     <color name="con_yellow">#FFB22F</color>
 
-    <color name="dis_add_bt">#06aff1</color>
+    <color name="dis_add_bt">#0e932e</color>
 
 
 </resources>
