--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address.xml
@@ -10,7 +10,7 @@
         android:layout_marginBottom="10dp"
         android:id="@+id/rl_add_address"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="80dp">
         <Button
             android:id="@+id/bt_add_address_list"
             android:layout_width="140dp"
@@ -18,9 +18,10 @@
             android:layout_centerInParent="true"
             android:background="#0e932e"
             android:text="新增收货地址"
-            android:textColor="#ffffff"/>
+            android:textColor="#ffffff"
+            android:layout_marginBottom="20dp"/>
     </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
+    <ListView
         android:id="@+id/address_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,6 +31,6 @@
         android:cacheColorHint="#00000000"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"></android.support.v7.widget.RecyclerView>
+        android:layout_marginRight="10dp"/>
 
 </RelativeLayout>
