--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_mydata_edit.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_mydata_edit.xml
@@ -3,43 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#0e932e"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/ib_personal_info_back_edit"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/dis_add_bt"
-            android:src="@drawable/ic_back_light"/>
-
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="6"
-            android:background="#00000000"/>
-
-        <FrameLayout
-            android:id="@+id/fl_personal_info_edit"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_weight="1.5">
-            <TextView
-                android:id="@+id/tv_personal_info_edit"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="保存"
-                android:textColor="#ffffff"/>
-
-        </FrameLayout>
-    </LinearLayout>
-
+    <include layout="@layout/activity_top_bar"/>
     <View
         android:id="@+id/view_info_mydata_one"
         android:layout_width="match_parent"
@@ -58,18 +22,35 @@
             android:orientation="vertical">
 
             <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="40sp"
+                android:layout_gravity="center_vertical"
+                android:background="#ffffff">
+                <TextView
+                    android:id="@+id/tv_personal_info_mydata1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="请输入您的基本信息:"
+                    android:textSize="18sp"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center_vertical"
+                    android:textStyle="bold"/>
+            </RelativeLayout>
+            <View
+                style="@style/view_small"/>
+            <RelativeLayout
                 android:id="@+id/rl_personal_info_mydata"
                 style="@style/RlInfoStyle">
 
                 <TextView
                     android:id="@+id/tv_info_mydata_name_edit"
                     style="@style/tv_personal_info_address"
-                    android:text="用户名："/>
+                    android:text="用\t\t户\t\t名："/>
 
                 <EditText
                     android:id="@+id/et_info_mydata_name_edit"
                     style="@style/et_personal_info_address"
-                    android:layout_toRightOf="@id/tv_info_mydata_name"
+                    android:layout_toRightOf="@id/tv_info_mydata_name_edit"
                     android:hint="请输入用户名称"/>
             </RelativeLayout>
 
@@ -81,12 +62,12 @@
                 <TextView
                     android:id="@+id/tv_info_mydata_nickname_edit"
                     style="@style/tv_personal_info_address"
-                    android:text="昵称："/>
+                    android:text="昵\t\t\t\t\t\t称："/>
 
                 <EditText
                     android:id="@+id/et_info_mydata_nickname_edit"
                     style="@style/et_personal_info_address"
-                    android:layout_toRightOf="@id/tv_info_mydata_nickname"
+                    android:layout_toRightOf="@id/tv_info_mydata_nickname_edit"
                     android:hint="请输入用户名称"/>
             </RelativeLayout>
 
@@ -98,13 +79,13 @@
                 <TextView
                     android:id="@+id/tv_info_mydata_sex_edit"
                     style="@style/tv_personal_info_address"
-                    android:text="性别："/>
+                    android:text="性\t\t\t\t\t\t别："/>
 
                 <RelativeLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/tv_info_mydata_sex"
-                    android:layout_toEndOf="@id/tv_info_mydata_sex">
+                    android:layout_toRightOf="@id/tv_info_mydata_sex_edit"
+                    android:layout_toEndOf="@id/tv_info_mydata_sex_edit">
 
                     <RadioGroup
                         android:layout_marginTop="5dp"
@@ -131,15 +112,6 @@
                             android:paddingLeft="13dp"
                             android:drawableRight="@android:drawable/btn_radio"
                             android:text="女" />
-                        <RadioButton
-                            android:id="@+id/butto3"
-                            android:layout_width="80dp"
-                            android:layout_height="wrap_content"
-                            android:button="@null"
-                            android:drawableRight="@android:drawable/btn_radio"
-                            android:paddingLeft="13dp"
-                            android:text="保密" />
-
                     </RadioGroup>
                 </RelativeLayout>
             </RelativeLayout>
@@ -152,69 +124,91 @@
                 <TextView
                     android:id="@+id/tv_info_mydata_birthdate_edit"
                     style="@style/tv_personal_info_address"
-                    android:text="年龄："/>
+                    android:text="年\t\t\t\t\t\t龄："/>
 
                 <EditText
                     android:id="@+id/et_info_mydata_birthdate_edit"
                     style="@style/et_personal_info_address"
-                    android:layout_toRightOf="@id/tv_info_mydata_birthdate"
+                    android:layout_toRightOf="@id/tv_info_mydata_birthdate_edit"
                     android:hint="请输入用户名称"
                     android:inputType="number"/>
             </RelativeLayout>
 
             <!--<View-->
-                <!--style="@style/view_small"/>-->
+            <!--style="@style/view_small"/>-->
             <!--<RelativeLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="120dp"-->
-                <!--android:background="#ffffff"-->
-                <!--android:layout_gravity="center_vertical">-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="120dp"-->
+            <!--android:background="#ffffff"-->
+            <!--android:layout_gravity="center_vertical">-->
 
-                <!--<TextView-->
-                    <!--android:id="@+id/tv_info_mydata_img"-->
-                    <!--android:layout_width="120dp"-->
-                    <!--android:layout_height="120dp"-->
-                    <!--android:layout_alignParentLeft="true"-->
-                    <!--android:layout_alignParentStart="true"-->
-                    <!--android:layout_marginLeft="20dp"-->
-                    <!--android:layout_marginStart="20dp"-->
-                    <!--android:text="我的头像："-->
-                    <!--android:textColor="#444444"-->
-                    <!--android:textSize="20sp"-->
-                    <!--android:gravity="center_vertical"/>-->
-                <!--<ImageView-->
-                    <!--android:id="@+id/iv_info_mydata_showimg"-->
-                    <!--android:layout_width="140dp"-->
-                    <!--android:layout_height="120dp"-->
-                    <!--android:layout_toRightOf="@id/tv_info_mydata_img"-->
-                    <!--android:src="@drawable/personal_info_bg"/>-->
-                <!--<ImageButton-->
-                    <!--android:id="@+id/ib_personal_info_mydata_addimg"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="100dp"-->
-                    <!--android:layout_marginTop="15dp"-->
-                    <!--android:layout_marginBottom="15dp"-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:layout_marginRight="5dp"-->
-                    <!--android:layout_toRightOf="@id/iv_info_mydata_showimg"-->
-                    <!--android:src="@drawable/ic_personal_info_mydata_addimg"-->
-                    <!--android:background="#ffffff"/>-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_info_mydata_img"-->
+            <!--android:layout_width="120dp"-->
+            <!--android:layout_height="120dp"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:layout_marginStart="20dp"-->
+            <!--android:text="我的头像："-->
+            <!--android:textColor="#444444"-->
+            <!--android:textSize="20sp"-->
+            <!--android:gravity="center_vertical"/>-->
+            <!--<ImageView-->
+            <!--android:id="@+id/iv_info_mydata_showimg"-->
+            <!--android:layout_width="140dp"-->
+            <!--android:layout_height="120dp"-->
+            <!--android:layout_toRightOf="@id/tv_info_mydata_img"-->
+            <!--android:src="@drawable/personal_info_bg"/>-->
+            <!--<ImageButton-->
+            <!--android:id="@+id/ib_personal_info_mydata_addimg"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:layout_marginTop="15dp"-->
+            <!--android:layout_marginBottom="15dp"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:layout_toRightOf="@id/iv_info_mydata_showimg"-->
+            <!--android:src="@drawable/ic_personal_info_mydata_addimg"-->
+            <!--android:background="#ffffff"/>-->
             <!--</RelativeLayout>-->
 
+            <!--<View-->
+            <!--style="@style/view_big"/>-->
+
             <View
-                style="@style/view_big"/>
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:background="#e6e6e6"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="40sp"
+                android:layout_gravity="center_vertical"
+                android:background="#ffffff">
+                <TextView
+                    android:id="@+id/tv_personal_info_mydata2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="请输入您的附加信息:"
+                    android:textSize="18sp"
+                    android:layout_marginLeft="20dp"
+                    android:gravity="center_vertical"
+                    android:textStyle="bold"/>
+            </RelativeLayout>
+            <View
+                style="@style/view_small"/>
             <RelativeLayout
                 style="@style/RlInfoStyle">
 
                 <TextView
                     android:id="@+id/tv_info_mydata_email_edit"
                     style="@style/tv_personal_info_address"
-                    android:text="email："/>
+                    android:text="邮\t\t\t\t\t\t箱："/>
 
                 <EditText
                     android:id="@+id/et_info_mydata_email_edit"
                     style="@style/et_personal_info_address"
-                    android:layout_toRightOf="@id/tv_info_mydata_email"
+                    android:layout_toRightOf="@id/tv_info_mydata_email_edit"
                     android:hint="请输入用户名称"
                     android:inputType="textEmailAddress"/>
             </RelativeLayout>
@@ -232,7 +226,7 @@
                 <EditText
                     android:id="@+id/et_info_mydata_phone_edit"
                     style="@style/et_personal_info_address"
-                    android:layout_toRightOf="@id/tv_info_mydata_phone"
+                    android:layout_toRightOf="@id/tv_info_mydata_phone_edit"
                     android:hint="请输入用户名称"
                     android:inputType="phone"/>
             </RelativeLayout>
@@ -245,12 +239,12 @@
                 <TextView
                     android:id="@+id/tv_info_mydata_qq_edit"
                     style="@style/tv_personal_info_address"
-                    android:text="qq号码："/>
+                    android:text="QQ\t\t号码："/>
 
                 <EditText
                     android:id="@+id/et_info_mydata_qq_edit"
                     style="@style/et_personal_info_address"
-                    android:layout_toRightOf="@id/tv_info_mydata_qq"
+                    android:layout_toRightOf="@id/tv_info_mydata_qq_edit"
                     android:hint="请输入用户名称"
                     android:inputType="number"/>
             </RelativeLayout>
