--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <include layout="@layout/activity_top_bar" />
-
-    <TextView
+    <include
+        android:id="@+id/order_include"
+        layout="@layout/activity_top_bar"/>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/lay_refresh_order"
+        android:layout_below="@id/order_include"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="wodedingdan"/>
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/order_lv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:cacheColorHint="#00000000"
+            android:dividerHeight="5dp">
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
