--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_relation.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_relation.xml
@@ -7,6 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="lianxikefu"/>
+        android:text="lianxikefu"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
