--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order_edit_item.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order_edit_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="120dp"
+              android:layout_height="120dp"
+              android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_order_edit_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
         android:src="@drawable/ic_logo"/>
 
-</RelativeLayout>
+</LinearLayout>
